css fixes to sidepanel. removed absolutes, fixed overflow bugs and removed sticky which is replaced with dom hierarchy

--- a/indico/modules/events/timetable/client/js/UnscheduledContributions.module.scss
+++ b/indico/modules/events/timetable/client/js/UnscheduledContributions.module.scss
@@ -13,7 +13,15 @@
   gap: 10px;
 }
 
-.contributions-container {
+.container {
+  display: flex;
+  flex-direction: column;
+
+  width: min(320px, 100%);
+  flex-shrink: 0;
+  height: 100%;
+  border-left: 1px solid $raincloud-gray;
+
   :global(.ui.basic.button),
   :global(.ui.basic.buttons .button) {
     box-shadow: none;
@@ -21,48 +29,28 @@
     margin: 0;
   }
 
-  position: sticky;
-  top: 0;
-  padding: 1rem 0 1rem 0.5rem;
-  align-self: flex-start;
-  display: flex;
-  flex-direction: column;
-
-  width: min(320px, 100%);
-  flex-shrink: 0;
-  height: 100%;
-  overflow-x: hidden;
-  border-left: 1px solid $raincloud-gray;
-
-  .content {
+  .container-header {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    height: 100%;
+    gap: 0.5rem;
+    width: 100%;
     padding: 1rem;
 
-    & > h4 {
-      display: flex;
-
-      & > i:global(.icon) {
-        margin-left: auto;
-      }
-    }
-
     .actions {
-      position: relative;
+      width: 100%;
       display: flex;
+      align-items: center;
+      position: relative;
       gap: 0.5rem;
       justify-content: space-between;
 
-      :global(.ui.icon.input) {
-        flex-grow: 1;
+      :global(.ui.input) {
+        width: 100%;
       }
 
       :global(.ui.search.selection.dropdown) {
         width: 100%;
+        height: 100%;
         min-width: 0;
         flex-shrink: 1;
         flex-grow: 0;
@@ -116,11 +104,22 @@
         }
       }
     }
+  }
 
-    .content {
+  .content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    overflow-y: scroll;
+    height: 100%;
+
+    & > h4 {
       display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
+
+      & > i:global(.icon) {
+        margin-left: auto;
+      }
     }
 
     .contribution {
@@ -148,10 +147,9 @@
 }
 
 .title {
-  margin-bottom: 0;
+  margin: 0;
   font-size: 1.125rem;
   font-weight: bold;
-  padding: 0 1rem;
 }
 
 .pane-resize-handle {
@@ -224,7 +222,7 @@
     display: flex;
     opacity: 0;
     visibility: hidden;
-    transform: translateX(10px);
+    transform: translateX(0.5rem);
 
     transition:
       opacity 0.2s ease,
@@ -259,11 +257,8 @@
 
   &::before {
     content: '';
-    position: absolute;
-    left: 0.5rem;
-    top: 0.5rem;
-    bottom: 0.5rem;
     width: 5px;
+    height: 100%;
     border-radius: 4px;
     background: var(--session-color);
   }
